# user-dashboard

./: .env.example  .gitignore  DASHBOARD_STATUS_20250624.md  FAILURE_ANALYSIS_AND_LESSONS.md  README.md  dashboard_test.html  debug_architecture_tab.py  test_viewport.html
backend/: .env.example  .env.production  Dockerfile  alembic.ini  api_endpoints.md  pyproject.toml  requirements.txt  setup_documentation_blob.py  test_performance.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: agents.py  agents_async.py  agents_simple.py  api_catalog.py  architecture.py  auth.py  blob.py  cosmos.py  docs.py  documents.py  graph.py  live_data.py  memory.py  memory_layers.py  messages.py  monitoring.py  users.py  websocket.py
backend/app/core/: blob_storage.py  cache.py  config.py  cosmos_db.py  cosmos_optimization.py  cosmos_viewer.py  database.py  security.py
backend/app/models/: __init__.py  agent.py  message.py  user.py
backend/app/schemas/: api_catalog.py  auth.py  user.py
backend/app/services/: async_cache.py  async_cosmos_db.py  auth.py  cache.py  cosmos_db_manager.py
backend/app/utils/: logging.py
debug-scripts/: apply_dropdown_fix.html  capture_hotkey.sh  debug_rendering_issue.js  dropdown_cursor_debug.js  fix_all_dropdowns.js  fix_layout_and_rendering.js  permanent_trading_default.js  quick_nextgen_fix.js  set_trading_and_nextgen_defaults.js  set_trading_default.js  tab_content_debug.js  verify_fred_api.js
docs/: ARCHITECTURE_TAB_DOCUMENTATION.md  EMAIL_TO_HEAD_OF_RESEARCH.md  EMAIL_TO_HEAD_OF_RESEARCH_UPDATED.md  MAILBOX_ENHANCEMENTS.md  MESSAGING_SYSTEM.md  MIGRATION_PLAN.md  QUICK_WINS_IMPROVEMENTS.md  SOFTWARE_ENGINEERING_TOOLS_AUDIT.md  SYSTEM_ENFORCEMENT_CONTENT_INVENTORY.md  WEBSITE_DOCUMENTATION.md  documentation-structure.json  structure.json
frontend/: api-catalog-content.html  api-catalog-functions.js  api-catalog-styles.css  app.js  dashboard-fixes.js  dashboard-freeze-fix.html  dashboard.js  (+25 more)
(+19 files in other folders)
